# snowball

./: .editorconfig  .eslintrc.js  .gitignore  README.md  electron-builder.json5  index.html  index.yaml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vue.config.js
electron/: io.js  main.ts
electron/main/: index.ts
src/: App.vue  background.js  main.js  main.ts  notarize.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/background/: ipc.js
src/components/: DataTable.vue  FileImport.vue  HelloWorld.vue  LoadingScreen.vue  PaperPanel.vue  ProjectScreen.vue  TagEditor.vue
src/components/comments/: PaperComments.vue  RecentComments.vue
src/components/compare/: Main.vue
src/components/main/: Avatar.vue  ConfigIdentity.vue  LoadProject.vue  LoadingWait.vue  Menu.vue
src/components/papers/: Comments.vue  FileLoader.vue  Main.vue  PaperDetails.vue  ScreeningView.vue  Table.vue  Tabs.vue  Toolbar.vue  Tutorial.vue
src/components/project/: Collaborators.vue  Descriptions.vue  Main.vue  NoteEditor.vue  Statistics.vue
src/components/tags/: Tag.vue  TagEditor.vue  TagList.vue  TagManager.vue  TagModal.vue
src/components/workflow/: Graph.vue  Main.vue  Toolbar.vue
src/search/: grammar.js  grammar.ne  index.js  tests.js
src/store/: history.js  index.js  lock.js  persistence.js
src/utils/: colors.js  common.js  compatibility.js  debounce.js  export.js  git.js  import.js  io.js  literature.js  persistence.js  search.js  snowball.js  tags.js  worker.js
(+21 files in other folders)
